--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "biwoc-health",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://colleenkhm.github.io/biwoc-health/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "gh-pages": "^4.0.0",
     "heroku": "^7.60.2",
@@ -18,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
