--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "biwoc-health",
   "version": "0.1.0",
+  "main": "server.js",
   "homepage": "https://colleenkhm.github.io/biwoc-health/",
   "dependencies": {
     "bootstrap": "^5.2.0",
+    "express": "^4.18.1",
     "gh-pages": "^4.0.0",
     "heroku": "^7.60.2",
     "react": "^17.0.2",
